--- a/src/assets/styles/6.components/header/primary-nav.scss
+++ b/src/assets/styles/6.components/header/primary-nav.scss
@@ -150,4 +150,10 @@
       margin: 0 0 0 5px;
     }
   }
+
+  @media (max-width: 400px) {
+    &__menu-button-text {
+      display: none;
+    }
+  }
 }
